Fixed placeholder to not cause horizontal scroll to occur. Next goal: landing image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,6 @@ body {
 
 .header-placeholder {
     position: relative;
-    width: 100vw;
     height: 10.6667vh;
     margin: 0px;
     padding: 0px;
